<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_ingredient_container"
        style="@style/ViewMarginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_ingredient_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            tools:text="@string/text_tv_ingredient_name"/>

        <TextView
            android:id="@+id/tv_ingredient_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            tools:text="@string/text_tv_ingredient_weight"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_splitter_ingredient"
        style="@style/ViewMarginTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/desc_block_splitter"
        android:src="@drawable/bg_line_rectangle_point_five"
        app:layout_constraintTop_toBottomOf="@id/ll_ingredient_container"/>
</android.support.constraint.ConstraintLayout>